infra/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hub
---
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
---
apiVersion: v1
kind: Namespace
metadata:
  name: postgresql
